# ens_bot

./: .env.sample  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker.yml  release.yml
src/: lib.rs  main.rs
src/app/commands/: age_check.rs  check_members.rs  get_mee6_players.rs  get_users.rs  helpers.rs  member_info.rs  mod.rs  off.rs  ping.rs  reset_ranks.rs  to_kick.rs  update_mee6.rs  week_ranking.rs
src/domain/: mee6_player.rs  mod.rs  parser.rs  user.rs
src/domain/rank/: falcon_rank.rs  mee6_rank.rs  mod.rs
