[package]
name = "ens_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"
poise = "0.6.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serenity = { version = "0.12", features = [
    "framework",
    "standard_framework",
    "rustls_backend",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
